Button Icons, Dropdown, Text input, automatic svg cropping

--- a/index.html
+++ b/index.html
@@ -289,14 +289,12 @@
           <label for="textInput">try</label>
         </div>
 
-
-
-
-
-
       </section>
 
+      <h1>Dropdown</h1>
 
+      <section class='container4'>
+      </section>
 
     </div>
 
