Created pre-app menu for development purposes

--- a/index.html
+++ b/index.html
@@ -1,320 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="en" >
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="stylesheet" type="text/css" href="/index.css" /> -->
-    <!-- <link rel="stylesheet" type="text/css" href="/reset.css" /> -->
-    <link rel="stylesheet" type="text/css" href="/palette.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>af_admin</title>
+    <link rel="stylesheet" type="text/css" href="/reset.css" />
+    <link rel="stylesheet" type="text/css" href="/index.css" />
   </head>
-
   <body>
-    <div class="container">
-
-      <div class="grey center">0</div>
-      <div class="grey grey-1 center">1</div>
-      <div class="grey grey-2 center">2</div>
-      <div class="grey grey-3 center">3</div>
-      <div class="grey grey-4 center">4</div>
-      <div class="grey grey-5 center">5</div>
-      <div class="grey grey-6 center">6</div>
-      <div class="grey grey-7 center">7</div>
-      <div class="grey grey-8 center">8</div>
-      <div class="grey grey-9 center">9</div>
-      <div class="grey grey-10 center">10</div>
-      <div class="grey grey-11 center">11</div>
-      <div class="grey grey-12 center">12</div>
-      <div class="grey grey-13 center">13</div>
-      <div class="grey grey-14 center">14</div>
-      <div class="grey grey-15 center">15</div>
-      <div class="grey grey-16 center">16</div>
-
-      <div class="purple center">0</div>
-      <div class="purple purple-1 center">1</div>
-      <div class="purple purple-2 center">2</div>
-      <div class="purple purple-3 center">3</div>
-      <div class="purple purple-4 center">4</div>
-      <div class="purple purple-5 center">5</div>
-      <div class="purple purple-6 center">6</div>
-      <div class="purple purple-7 center">7</div>
-      <div class="purple purple-8 center">8</div>
-      <div class="purple purple-9 center">9</div>
-      <div class="purple purple-10 center">10</div>
-      <div class="purple purple-11 center">11</div>
-      <div class="purple purple-12 center">12</div>
-      <div class="purple purple-13 center">13</div>
-      <div class="purple purple-14 center">14</div>
-      <div class="purple purple-15 center">15</div>
-      <div class="purple purple-16 center">16</div>
-
-      <div class="pink center">0</div>
-      <div class="pink pink-1 center">1</div>
-      <div class="pink pink-2 center">2</div>
-      <div class="pink pink-3 center">3</div>
-      <div class="pink pink-4 center">4</div>
-      <div class="pink pink-5 center">5</div>
-      <div class="pink pink-6 center">6</div>
-      <div class="pink pink-7 center">7</div>
-      <div class="pink pink-8 center">8</div>
-      <div class="pink pink-9 center">9</div>
-      <div class="pink pink-10 center">10</div>
-      <div class="pink pink-11 center">11</div>
-      <div class="pink pink-12 center">12</div>
-      <div class="pink pink-13 center">13</div>
-      <div class="pink pink-14 center">14</div>
-      <div class="pink pink-15 center">15</div>
-      <div class="pink pink-16 center">16</div>
-
-      <div class="blue center">0</div>
-      <div class="blue blue-1 center">1</div>
-      <div class="blue blue-2 center">2</div>
-      <div class="blue blue-3 center">3</div>
-      <div class="blue blue-4 center">4</div>
-      <div class="blue blue-5 center">5</div>
-      <div class="blue blue-6 center">6</div>
-      <div class="blue blue-7 center">7</div>
-      <div class="blue blue-8 center">8</div>
-      <div class="blue blue-9 center">9</div>
-      <div class="blue blue-10 center">10</div>
-      <div class="blue blue-11 center">11</div>
-      <div class="blue blue-12 center">12</div>
-      <div class="blue blue-13 center">13</div>
-      <div class="blue blue-14 center">14</div>
-      <div class="blue blue-15 center">15</div>
-      <div class="blue blue-16 center">16</div>
-
-
-      <div class="red center">0</div>
-      <div class="red red-1 center">1</div>
-      <div class="red red-2 center">2</div>
-      <div class="red red-3 center">3</div>
-      <div class="red red-4 center">4</div>
-      <div class="red red-5 center">5</div>
-      <div class="red red-6 center">6</div>
-      <div class="red red-7 center">7</div>
-      <div class="red red-8 center">8</div>
-      <div class="red red-9 center">9</div>
-      <div class="red red-10 center">10</div>
-      <div class="red red-11 center">11</div>
-      <div class="red red-12 center">12</div>
-      <div class="red red-13 center">13</div>
-      <div class="red red-14 center">14</div>
-      <div class="red red-15 center">15</div>
-      <div class="red red-16 center">16</div>
-
-      <div class="green center">0</div>
-      <div class="green green-1 center">1</div>
-      <div class="green green-2 center">2</div>
-      <div class="green green-3 center">3</div>
-      <div class="green green-4 center">4</div>
-      <div class="green green-5 center">5</div>
-      <div class="green green-6 center">6</div>
-      <div class="green green-7 center">7</div>
-      <div class="green green-8 center">8</div>
-      <div class="green green-9 center">9</div>
-      <div class="green green-10 center">10</div>
-      <div class="green green-11 center">11</div>
-      <div class="green green-12 center">12</div>
-      <div class="green green-13 center">13</div>
-      <div class="green green-14 center">14</div>
-      <div class="green green-15 center">15</div>
-      <div class="green green-16 center">16</div>
-
-
-    </div>
-
-    <div class="container2">
-      <h1>THEMES</h1>
-      <h3>generic color</h3>
-      <section class="container3">
-        <div class="generic-subtle center">subtle</div>
-        <div class="generic-light center">light</div>
-        <div class="generic-base center">base</div>
-        <div class="generic-medium center">medium</div>
-        <div class="generic-strong center">strong</div>
-      </section>
-
-      <h3>primary color</h3>
-      <section class="container3">
-        <div class="primary-subtle center">subtle</div>
-        <div class="primary-light center">light</div>
-        <div class="primary-base center">base</div>
-        <div class="primary-medium center">medium</div>
-        <div class="primary-strong center">strong</div>
-      </section>
-
-      <h3>secondary color</h3>
-      <section class="container3">
-        <div class="secondary-subtle center">subtle</div>
-        <div class="secondary-light center">light</div>
-        <div class="secondary-base center">base</div>
-        <div class="secondary-medium center">medium</div>
-        <div class="secondary-strong center">strong</div>
-      </section>
-
-
-      <h3>success color</h3>
-      <section class="container3">
-        <div class="success-subtle center">subtle</div>
-        <div class="success-light center">light</div>
-        <div class="success-base center">base</div>
-        <div class="success-medium center">medium</div>
-        <div class="success-strong center">strong</div>
-      </section>
-
-      <h3>error color</h3>
-      <section class="container3">
-        <div class="error-subtle center">subtle</div>
-        <div class="error-light center">light</div>
-        <div class="error-base center">base</div>
-        <div class="error-medium center">medium</div>
-        <div class="error-strong center">strong</div>
-      </section>
-
-      <h1>ELEMENTS</h1>
-      <h3>Site wide links</h3>
-      <section class="container4">
-        <div class="sizer">
-          <a class="link-site">
-            linksite
-          </a>
-        </div>
-        <div class="sizer">
-          <a class="link-site hover">
-            hover
-          </a>
-        </div>
-        <div class="sizer">
-          <a class="link-site active">
-            active
-          </a>
-        </div>
-      </section>
-
-      <h3>Panel Links</h3>
-      <section class="container4">
-
-        <div class="sizer">
-          <a class="link-panel">
-            home
-          </a>
-        </div>
-
-        <div class="sizer">
-          <a class="link-panel hover">
-            hover
-          </a>
-        </div>
-
-        <div class="sizer">
-          <a class="link-panel active">
-            active
-          </a>
-        </div>
-
-        <div class="sizer">
-          <a class="link-panel try">
-            try
-          </a>
-        </div>
-
-
-      </section>
-
-      <h1>Buttons</h1>
-
-      <h3>Text Buttons</h3>
-      <section class="container4">
-
-
-        <div class="sizer">
-          <a class="button-text">
-            login
-          </a>
-        </div>
-
-        <div class="sizer">
-          <a class="button-text hover">
-            hover
-          </a>
-        </div>
-
-        <div class="sizer">
-          <a class="button-text active">
-            active
-          </a>
-        </div>
-
-        <div class="sizer">
-          <a class="button-text try">
-            try
-          </a>
-        </div>
-
-
-      </section>
-
-      <h1>Inputs</h1>
-      <h3>Text input </h3>
-      <section class="container4">
-        <div class="text-input">
-          <label for="teamName">resting</label>
-          <input id="teamName" type="text" autoComplete="off" ></input>
-        </div>
-
-        <div class="text-input hover">
-          <label for="teamName">hover</label>
-          <input id="teamName" type="text" autoComplete="off" ></input>
-        </div>
-
-        <div class="text-input active">
-          <label for="teamName">active</label>
-          <input id="teamName" type="text" autoComplete="off" ></input>
-        </div>
-
-        <div class="text-input error">
-          <label for="teamName">error</label>
-          <input id="teamName" type="text" autoComplete="off" ></input>
-        </div>
-
-        <div class="text-input success">
-          <label for="teamName">success</label>
-          <input id="teamName" type="text" autoComplete="off" ></input>
-        </div>
-
-        <div class="text-input-try">
-          <input id="textInput" type="text" autoComplete="off" placeholder=" " ></input>
-          <label for="textInput">try</label>
-        </div>
-
-      </section>
-
-      <h1>Dropdown</h1>
-
-      <section class='container4'>
-      </section>
-
-    </div>
-
-    <script>
-      const tt = document.getElementById('textInput');
-      tt.addEventListener('input', (e) => {
-        if (e.target.value.match(/[0-9]+/)) {
-          tt.classList.add('error');
-          tt.classList.remove('success');
-        } else if (e.target.value.length >= 3) {
-          tt.classList.add('success');
-          tt.classList.remove('error');
-        } else {
-          tt.classList.remove('error');
-          tt.classList.remove('success');
-        }
-      })
-    </script>
-    <div id="root"></div>
+    <div id="root" ></div>
     <script type="module" src="/src/index.jsx"></script>
   </body>
-
 </html>
