--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>af_admin</title>
-    <!-- <link rel="stylesheet" type="text/css" href="/reset.css" /> -->
+    <link rel="stylesheet" type="text/css" href="/reset.css" />
     <link rel="stylesheet" type="text/css" href="/index.css" />
     <link rel='stylesheet' type='text/css' href='/typography.css' />
     <link rel="stylesheet" type="text/css" href="/wristband.css" />
