--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <div id="root" ></div>
+    <div id="flash-messages-portal" ></div>
     <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
