flashMessages refactored into src/flash_messages

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <link rel="stylesheet" type="text/css" href="/wristband.css" />
   </head>
   <body>
-    <div id="root" ></div>
-    <div id="flash-messages-portal" ></div>
+    <div id='app-root'>
+      <div id="react-root" ></div>
+      <div id="flash-message-portal" > </div>
+    </div>
     <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
