new flashMessages system

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <div id='app-root'>
       <div id="react-root" ></div>
       <div id="flash-message-portal" > </div>
+      <div id="flash-messages-react-root"></div>
+      <div id='modal-dialog-portal' > </div>
     </div>
     <script type="module" src="/src/index.jsx"></script>
   </body>
