modals rendered using the same logic as flash messages

--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
   <body>
     <div id='app-root'>
       <div id="react-root" ></div>
-      <div id="flash-message-portal" > </div>
       <div id="flash-messages-react-root"></div>
-      <div id='modal-dialog-portal' > </div>
+      <div id='modals-react-root' > </div>
     </div>
     <script type="module" src="/src/index.jsx"></script>
   </body>
