--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet"  type="text/css" href="/index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>af_admin</title>
+    <link rel="stylesheet" type="text/css" href="/reset.css" />
+    <link rel="stylesheet" type="text/css" href="/index.css" />
+    <link rel='stylesheet' type='text/css' href='/typography.css' />
+    <link rel="stylesheet" type="text/css" href="/wristband.css" />
   </head>
   <body>
-    <div id="root"></div>
+    <div id='app-root'>
+      <div id="react-root" ></div>
+      <div id="flash-messages-react-root"></div>
+      <div id='modals-react-root' > </div>
+    </div>
     <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
